After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 790667 - The ink supply level bar causes PrinterEntries to vexpand even when that's not wanted
The ink supply level bar causes PrinterEntries to vexpand even when that's no...
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Printers
git master
Other Linux
: Normal normal
: ---
Assigned To: Marek Kašík
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-11-21 14:19 UTC by Felipe Borges
Modified: 2017-11-21 16:30 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
printer: Don't show the supply level bar by default (3.34 KB, patch)
2017-11-21 14:20 UTC, Felipe Borges
committed Details | Review

Description Felipe Borges 2017-11-21 14:19:56 UTC
.
Comment 1 Felipe Borges 2017-11-21 14:20:15 UTC
Created attachment 364121 [details] [review]
printer: Don't show the supply level bar by default

We were checking for the ink supply level at the callback of the
supply bar "draw" signal. This way we were making the the widget
visible, causing it to allocate vertical space even when it isn't
desired.

Now we check for the supply level before setting the visiblity of
the supply level widget.
Comment 2 Marek Kašík 2017-11-21 15:41:06 UTC
Review of attachment 364121 [details] [review]:

Thank you for the patch. It fixes the issue. Push it also to gnome-3-26 branch please.

::: panels/printers/pp-printer-entry.c
@@ +232,3 @@
+{
+    return !(self->inklevel->marker_levels && self->inklevel->marker_colors &&
+             self->inklevel->marker_names && self->inklevel->marker_types);

Check these against NULL please.
Comment 3 Felipe Borges 2017-11-21 16:30:02 UTC
Attachment 364121 [details] pushed as 5ac6a0d (gnome-3-26) - printer: Don't show the supply level bar by default
Attachment 364121 [details] pushed as 5d4cb8e (master)- printer: Don't show the supply level bar by default