printer: Don't show the supply level bar by default

We were checking for the ink supply level at the callback of the
supply bar "draw" signal. This way we were making the the widget
visible, causing it to allocate vertical space even when it isn't
desired.

Now we check for the supply level before setting the visiblity of
the supply level widget.

https://bugzilla.gnome.org/show_bug.cgi?id=790667